<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ba.unsa.pmf.settings.GameLevelFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/titleConstraint"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/white">

    <ImageView
        android:id="@+id/pmfLogo"
        android:layout_width="379dp"
        android:layout_height="151dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/transparent_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/level"
        android:textAlignment="center"
        android:textColor="#4f5b66"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pmfLogo"
        app:layout_constraintVertical_bias="0.111" />

    <RadioGroup
        android:id="@+id/levelRadioGroup"
        android:layout_width="271dp"
        android:layout_height="179dp"
        android:layout_marginStart="@dimen/question_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.097">

      <RadioButton
          android:id="@+id/easyLevelRadioButton"
          android:layout_width="match_parent"
          android:layout_height="53dp"
          android:layout_marginBottom="@dimen/question_vertical_margin"
          android:checked="true"
          android:text="@string/easy"
          android:textColor="#4f5b66"
          android:textSize="24sp"
          android:textStyle="bold"
          tools:text="Lagana" />

      <RadioButton
          android:id="@+id/mediumLevelRadioButton"
          android:layout_width="match_parent"
          android:layout_height="53dp"
          android:layout_marginBottom="@dimen/question_vertical_margin"
          android:text="@string/medium"
          android:textColor="#4f5b66"
          android:textSize="24sp"
          android:textStyle="bold"
          tools:text="Srednja" />

      <RadioButton
          android:id="@+id/hardLevelRadioButton"
          android:layout_width="match_parent"
          android:layout_height="53dp"
          android:layout_marginBottom="@dimen/question_vertical_margin"
          android:text="@string/hard"
          android:textColor="#4f5b66"
          android:textSize="24sp"
          android:textStyle="bold"
          tools:text="Teška" />

    </RadioGroup>

    <Button
        android:id="@+id/levelNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:paddingStart="@dimen/button_padding"
        android:paddingEnd="@dimen/button_padding"
        android:text="@string/next"
        android:textColor="	#4f5b66"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelRadioGroup"
        app:layout_constraintVertical_bias="0.206" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
